Fixed overflow error

--- a/styles/components.css
+++ b/styles/components.css
@@ -28,6 +28,7 @@ h2 {
   font-size: 24px;
   padding: 0;
   margin: 0;
+  line-height: 24px;
 }
 
 .menu-item {
