--- a/styles/content.css
+++ b/styles/content.css
@@ -5,10 +5,12 @@
   margin: 0 auto;
   border-bottom: 1px solid #ffffff;
   padding: 14px 0;
+  overflow: hidden;
 }
 
 .logo {
   font-size: 24px;
+  float: left;
 }
 
 .hero {
